--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "^4.42.0"
   },
   "dependencies": {
+    "antd": "^4.0.3",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
