--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
     "node-sass": "^4.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0"
